# tauri_agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: logging.rs  main.rs
src-tauri/src/ai/: claude.rs  mod.rs
src-tauri/src/automation/: chrome_cdp.rs  mod.rs  windows_ui.rs
